; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/vcdcontroltool/extr_vcdcontroltool.c_HandleDriverCommand.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/vcdcontroltool/extr_vcdcontroltool.c_HandleDriverCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hDriverWnd = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @HandleDriverCommand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HandleDriverCommand(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @LOWORD(i32 %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  switch i32 %9, label %20 [
    i32 130, label %10
    i32 129, label %14
    i32 128, label %17
  ]

10:                                               ; preds = %2
  %11 = load i32, i32* @hDriverWnd, align 4
  %12 = call i32 @DestroyWindow(i32 %11)
  %13 = load i32, i32* @TRUE, align 4
  store i32 %13, i32* %3, align 4
  br label %22

14:                                               ; preds = %2
  %15 = call i32 (...) @StartDriver()
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* %3, align 4
  br label %22

17:                                               ; preds = %2
  %18 = call i32 (...) @StopDriver()
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* %3, align 4
  br label %22

20:                                               ; preds = %2
  %21 = load i32, i32* @FALSE, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %20, %17, %14, %10
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i32 @DestroyWindow(i32) #1

declare dso_local i32 @StartDriver(...) #1

declare dso_local i32 @StopDriver(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
